--- a/TB Tekstil/styles/style.css
+++ b/TB Tekstil/styles/style.css
@@ -26,7 +26,7 @@ text-align: center;
 
 }
 
-body{background-color:white}
+
 
 
 .menu-bar{
@@ -42,7 +42,8 @@ body{background-color:white}
 }
 
 .menu-bar a{
-    text-align: center ;
+
+    text-align: center;
     margin: 30px;
     width: 168px;
     padding: 10px;
@@ -51,11 +52,36 @@ body{background-color:white}
     text-decoration: none;
     color:white;
 }
+.menu-bar{
+font-size: 110%;
+}
 .active, .menu-bar a:hover{
     background: #d4c995;
     height: 10%;
     border-radius: 10px;
 }
+
+
+body{
+    background-color: burlywood;
+}
+
+.tur{
+    text-align: left;
+    font-size: x-large;
+    font-style: italic;
+    text-decoration-color: cornsilk;
+}
+.tur2{
+    font-size: large;
+    text-align: left;
+    
+}
+
+
+
+
+
 
 
 
